docs/presentation/2026-06-17_2026-07-22/v2/EVIDENCE.md
---
doc_type: PRESENTATION_EVIDENCE
scope: project
status: active
source_of_truth: false
range: 2026-06-17 ~ 2026-07-22
baseline: 2026-05-19 ~ 2026-06-17
version: v2
supersedes: ./../v1/EVIDENCE.md
created_at: 2026-07-22
companion: ./deck.html
---

# 근거·확인필요 원장 — 2026-06-17 ~ 2026-07-22 · v2

> **v2 변경(사용자 피드백 반영, 2026-07-22)**: (1) **기본 보안 6종**(로그인 제한·2단계 인증·프롬프트 인젝션 방지·공유 링크 만료·LLM 사용량 한도·감사 변조방지)을 개발 목표로서 테마 승격(v1 과소 표현 정정). (2) **구글 드라이브 MCP 연결** 추가 기능 반영. (3) **프로덕션 라이브 배포는 이번 기간 미진행(보안 결정 대기)** — 모든 "배포/POST-DEPLOY/라이브 PB-0008"을 **검증 환경(로컬→QA)** 기준으로 재해석, 프로덕션 라이브 실적과 구분. (4) **DB 복제본 부하분산은 환경 제약으로 미구성** — 참조 메타데이터만 내부 구축(관계도 지도). (U-020/U-021 신설, §0 KPI·§3 재정의).
>
> **핵심 프레이밍(정직성 — v2 필수)**: 이 원장·덱의 "배포됨/POST-DEPLOY/라이브 PB-0008 PASS"는 **검증 환경(로컬→QA)의 실행/서빙본에서 확인**한 것이다. **프로덕션 라이브 배포(라이브 DB 접근·실사용자 트래픽)는 이번 기간 수행하지 않았다**(사용자 확인). "검증 환경 검증 완료"와 "라이브 운영 실적"을 반드시 구분한다.
>
> **수집 채널**: ①git(main 반영분 기준, first-parent 머지 521 PR · baseline = 2026-06-16 마지막 main 상태) ②정책·릴리즈노트(RELEASE_NOTES 07-10 까지 게재 · SECURITY.md §12~16) ③unit feature 기록 ④개발 세션 transcript(보조 — 교차확인분만) ⑤이전 기간 발표자료(v1 · `docs/presentation/2026-06-17_2026-07-08/v1`).
> 커밋 해시·PR#·CHG/ADR/TASK id 는 추적용 내부 참고이며 **청중 덱 본문 비노출**. 민감값(계정·비밀번호·토큰·접속좌표)은 원장에도 비노출.
>
> **이전 기간 비교 baseline(사용자 지정)**: 2026-05-19 ~ 2026-06-17(직전 등길이). 그 기간은 개별 대화 UI·권한 트리·데이터소스 관리·안정화 위주였고 그룹협업·자율지식·관계도·무중단·메시지편집·자가검증·기본보안 대부분 전무(git 실측: baseline 고유 feature 영역 8 vs 본 범위 18). 서사 = "개별 대화 다듬기 → 보안·협업·신뢰·지도·운영 플랫폼(실서비스 준비) 도약".

---

## 0. 이번 기간 KPI (표지·요약 수치의 근거·산식)

### E-000a · 진척한 기능 영역 = 18개 (지난 기간 8개)
- **kind**: git · **ref**: 범위 커밋 subject+body 고유 `feature-00NN` 토큰 = 18(0002·0003·0006·0007·0009·0010·0011·0012·0013·0014·0015·0016·0017·0018·0019·0020·0021·0022). baseline = 8.
- **status**: 검증됨 (git 이력) · **note**: 활동은 feature-0016 집중. baseline 8 대비 확장(그룹대화·관계도·무중단·메시지편집·자가검증·작업공간 신규 축).

### E-000b · 서비스 기본 보안 조치 = 6종
- **kind**: git / policy-doc(SECURITY) · **ref**: 2026-06-19 배치(#349 share-link-expiry·#351 login-attempt-limit·#354 audit-tamper-evidence·#356 llm-usage-quota·#357 prompt-injection-defense·#361 two-factor-auth) + "release-notes-security-6"(#362). SECURITY.md §12(로그인 제한)·§13(감사 변조방지 해시체인)·§14(인젝션 방지 datamarking)·§16(2FA TOTP).
- **status**: 검증됨 (개발·검증 환경 검증 완료) · **note**: 6종 = 로그인 시도 제한·2단계 인증·AI 프롬프트 인젝션 방지·공유 링크 만료·LLM 사용량 한도·감사 기록 변조방지. **프로덕션 라이브 적용은 라이브 배포 시점(U-020)**.

### E-000c · 관계도에 자동 적재·군집한 데이터 객체 = 23,465개 (군집 3,652)
- **kind**: git / unit-doc · **ref**: feature-0016 content-cluster POST-DEPLOY(2026-07-13, 검증 환경) — objects 23,465 / clusters 3,652 / error 0, AGE 수렴 Table 141/141·Routine 217/217. 밴드 렌더 PB-0008(검증 환경 실 Windows).
- **status**: 검증됨 (서버측 파이프라인 + 밴드 렌더, 검증 환경) · **note**: **측정 위치** — objects/clusters=서버측 집계(테이블·컬럼·함수 통합), 밴드 렌더=실 Windows 브라우저(검증 환경). "함수만"으로 오독 금지. **이 지도가 '복제본 대신 내부 구축한 참조 메타데이터'(U-021)**.

### E-000d · 무중단 배포 구조 · 접속 중단 = 0회
- **kind**: git / unit-doc · **ref**: feature-0014(06-30)+feature-0020 deploy-all(07-14, #780/#782). 부하 실증: 단일 replica 롤링 중 정상 클라 104/104 HTTP 200·0 실패·최대 0.27s. PG 재시작 중 RW 134/ERR 0.
- **status**: 검증됨 (**검증 환경 부하 시험** — 단일 호스트·라이브 사용자 1명 조건) · **note**: 프로덕션 SLA 아님. "무중단 배포 구조"(재배포 시 중단 0)를 검증 환경에서 실증한 것. **워커 자동 롤백 미실증(U-014)**. 프로덕션 라이브 배포 자체는 미진행(U-020). 참고: 부수 지표 229건 작업 단위(고유 TASK 토큰·개발 이력 집계·PR 521).

---

## 1. 확인된 주장 (근거 있음 — 특별 언급 없으면 검증 환경 기준)

### 테마 SEC · 기본 보안 6종

#### E-021 · 서비스 기본 보안 6종 (신규·완료)
- **kind**: git / policy-doc(SECURITY §12~16)
- **ref**: 로그인 시도 제한(§12 계정 잠금+IP throttle, #351)·2단계 인증(§16 TOTP+brute-force 방어, #361)·AI 프롬프트 인젝션 방지(§14 datamarking+명령 계층, #357)·공유 링크 만료(#349)·LLM 사용량 한도(#356 + 제한 안내 #350/#352)·감사 기록 변조방지(§13 해시 체인, #354). 모두 2026-06-19 배치.
- **status**: 확인(개발·검증 환경 검증 완료) — SECURITY.md 정본 §12~16 문서화 + 배치 릴리즈노트. **프로덕션 라이브 적용은 U-020**.
- **note**: 실서비스 운영의 전제 조건. 감사 해시 체인 = 사후 변조 시 즉시 드러남. 인젝션 방지 = 데이터에 숨긴 지시를 명령으로 오인 안 하게 계층 분리. baseline 엔 이 6종 대부분 전무 → 신규·완료. Google OAuth 로그인 토대(§15)도 같은 배치(구글 드라이브 연동의 기반).

### 테마 A · 대화 경험 고도화

#### E-001 · 대화별 추론 강도 4단계 + 런타임 예산 (이어받음→확장)
- **ref**: RELEASE_NOTES 07-06(reasoning-effort)·07-07(runtime-settings)·07-09(모델별 예산 상한 확대+강도별 분리+추론↔본문 비율). '일반'=무주입(회귀 방지).
- **status**: 확인 — 07-06/07-07 base **PB-0008 PASS**(검증 환경). 07-09 확대분 배포·게재 확인, 별도 PB-0008 = U-010.

#### E-002 · 메시지 편집(ChatGPT식) (신규·헤드라인)
- **ref**: feature-0019. 대화 내부 브랜치 트리(마이그 0041). 1:1=단순 수정/요청 수정 분기 재답변(`<n/m>` 페이징) / 그룹·공유=단순 수정만(@assistant 잠금·per-message IDOR 방지). 비분기 대화 byte-동치(회귀 0).
- **status**: 확인(개발·검증 환경 검증) — Phase1(1:1)·Phase2(그룹) **PB-0008 라이브 PASS**(검증 환경), 적대 보안리뷰 Phase1 2 MAJOR + Phase2 1 MAJOR 수정. Major·PLAN-APPROVED.
- **note**: 그룹 편집 보안 속성(잠금·IDOR·window)은 코드 보안리뷰로 결함 없음 확인, 별도 라이브 PB-0008 = U-011.

#### E-003 · 응답 지연 타임아웃 모달 제거 → 조용한 자동 재연결 (신규/완료)
- **ref**: RELEASE_NOTES 07-10(ask-timeout-nonblocking). **status**: 확인 — POST-DEPLOY PB-0008(검증 환경) PASS, main 게재.

#### E-004 · 실시간 진행 표시 (관찰자·그룹 멤버) (신규)
- **ref**: feature-0003 realtime-progress(CHG-20260721). 유휴 관찰자에게 재진입 없이 "처리 중" 실시간 등장. frontend-only.
- **status**: 확인(코드/사전배포) — 유닛 23/23 PASS·실 Windows 유휴탭 실측. 배포후 PB-0008 = U-012.

### 테마 B · 답변 신뢰·정직 (신규 축)

#### E-005 · 답변 자가 적대 검증 (신규)
- **ref**: feature-0021-redteam-review. 답변 확정 직후 choke-point 에서 분리 리뷰어 5축(근거·SQL·누출·완전·정직) 적대 점검, BLOCK 시 수정, 콘솔 "감사>AI 추론" 조회. fail-open·강도 게이팅·`REDTEAM_ENABLED` 스위치. 마이그 0042.
- **status**: 확인(개발·검증 환경 배포) — 유닛 34 PASS·회귀 0. **리뷰어 실판정 품질·환각 실감소 미측정 = U-013**.

#### E-006 · 첨부파일 근거 정합 — 부분증거 과단정 환각 봉인 (신규·연속 완결)
- **ref**: LRN-20260714-0004/0003. 3면 봉인(구조·피드백·계약) + 결정론 도구 `check_table_coverage`(첨부 SQL 대소문자 무시 코드 판정). 인라인 초과 정직 노트·라벨 대칭.
- **status**: 확인(코드·유닛·검증 환경 배포) — 유닛 12 PASS·§18.8 적대 2렌즈. **라이브 환각·false-missing 재발 감소 미측정 = U-013**(친수 이력 `unverified-live`).

#### E-007 · 대화 별칭 누출 가드 + 시스템변수 과차단 해소 (신규/완료·부수)
- **ref**: conv-alias-leak-guard(#807)·sysvar-guard(#792). **status**: 확인(머지·검증 환경 배포) — 라이브 무재발 실증 = U-013 계열.

### 테마 C · 함께 보기

#### E-008 · 공유 가시성 [from,to] window + 보안 봉인 (이어받음/완료)
- **ref**: RELEASE_NOTES 07-04(Critical)·SECURITY §21. window 만 노출·3면 물리 배제·fail-closed·never-widen.
- **status**: 확인(기능·보안 개발 완료 — 28 테스트+적대 7렌즈). **라이브 시각검증 = U-009**. 공유 링크 만료(E-021)와 결합.

#### E-009 · 공유 링크 참여 알림 + 리뷰 UX (이어받음·부수)
- **ref**: RELEASE_NOTES 07-03/04. **status**: 확인(공유뷰 mermaid PB-0008 검증 환경 PASS).

### 테마 D · 자율 지식

#### E-010 · 용어사전 자율등록 + ENUM 코드사전 + 채택 인박스 (이어받음→확장)
- **ref**: RELEASE_NOTES 06-29·07-07. 용어·코드값 후보 제안(자동승급/검토 큐)+채택 인박스 통합.
- **status**: 확인(개발 완료) — 용어 13+ENUM 코어 14+웹 9 PASS·호스트 1,581 PASS. ENUM·채택 인박스 라이브 = U-009 계열.

#### E-011 · 제품 분류 'AI 제안→사람 승인' (신규)
- **ref**: RELEASE_NOTES 07-08(§59). LLM 산출은 Pending 적재까지·사람 승인. 3중 게이트·데몬 OFF.
- **status**: 확인 — POST-DEPLOY(검증 환경) 실증(dry-run 11→10 Pending). 접근 allowlist 무변경.

#### E-022 · 구글 드라이브 MCP 연결 (신규 추가 기능)
- **kind**: git / unit-doc(feature-0010)
- **ref**: feature-0010-google-drive-integration(#391, 2026-06-24) + Google OAuth 로그인 토대(SECURITY §15, 06-19). 어시스턴트가 구글 드라이브 문서를 답변 근거로 참조. 이후 feature-0012 item10 에서 공유·연동 경로 정비(#714).
- **status**: 확인(개발 완료) — 코드 머지. **단 사내 계정 구글 로그인을 통한 드라이브 접근 허용 여부는 결정 대기 = U-020(라이브 배포 유보 사유 ①)**.
- **note**: 추가 기능. 라이브 접근 정책이 미결이라 프로덕션 활성화는 유보. baseline 엔 외부 문서 연결 전무 → 신규.

### 테마 E · 관계도 지도

#### E-012 · 노드 그래프 + 렌더러 전면 교체(G6→PixiJS) (이어받음·확장 / 교체=신규)
- **ref**: feature-0016. 렌더 엔진 전면 이관 G6 Canvas→PixiJS v8 WebGL(07-13) — 대규모 팬 버벅임 근본 해소, 게임엔진 기각, 디자인 무붕괴 계약·비상 폴백. 오브젝트 풀(183ms→30ms)·BitmapText.
- **status**: 확인(부분·검증 환경) — 이관 **라이브 PB-0008 PASS(검증 환경 실 Windows, §78/79/80)**. 컨텐츠 클러스터·검색·미니맵·상세 내비 PB-0008 PASS.
- **note**: **정직 경고 — 라이브 검증 규모 409객체 수준**, 실 규모(수천 테이블) 팬 미확증 = U-016. 60fps/16.8ms=실 Windows(검증 환경, 409객체), 11k=headless POC. ADR 번호 없음(BLUEPRINT/REPORT §78). **이 지도가 복제본 대체 참조 메타데이터(U-021)**.

#### E-013 · 대규모 성능·정리 + AI 능동 분석 '주의' 실질화 (이어받음)
- **ref**: RELEASE_NOTES 07-10(§60~76). LOD·컬링·위상서명 메모이즈(882노드 7.4×)·툴바 통합·§69 '주의' 실질화(715/715 done).
- **status**: 확인(서버측/headless + POST-DEPLOY 검증 환경). 화면 FPS 실 하드웨어 = U-016.

### 테마 F · AI 관제·콘솔

#### E-014 · AI 운영 현황 패널 + 콘솔 IA 개편 + 서브탭 (이어받음→완료)
- **ref**: RELEASE_NOTES 07-02/03(aiops-panel·ds-avg-latency, step_gap 재정의) + feature-0021 console-ia(07-16, 관측/설정 분리·서브탭·sticky).
- **status**: 확인 — 패널 10/10+페이징 15/15+1,430 PASS, ds-avg-latency PB-0008. console-ia POST-DEPLOY PB-0008(검증 환경) PASS. 패널 라이브+지연 KPI 트래픽 = U-015.

#### E-015 · 권한 카테고리 계층화 + 원자 분리 (신규·완료)
- **ref**: perm-category-hier(07-14)+perm-atomic-split(07-15). 카테고리 접근 5종·원자 23종·그래프 권한 분리.
- **status**: 확인 — POST-DEPLOY PB-0008(검증 환경) PASS(#801/#810). **perm-atomic-split 은 UI 단독 아님(엔드포인트 enforcement 전환)** — 부작용 회귀 1건(ds-test 버튼) 07-16 복구(보안 불변).

#### E-016 · 그래프 도움말·우클릭 메뉴 + 메타데이터 콘솔 재설계 (신규/이어받음·UI 단독)
- **ref**: graph-entry-help·graph-ctxmenu(07-14/15) + metadata-console redesign/polish/ux2(07-07/08).
- **status**: 확인 — POST-DEPLOY PB-0008(검증 환경) PASS. **UI 단독 — 백엔드/RBAC/스키마 0**(ctxmenu-category 육안 1건 DEFERRED).

### 테마 G · 기반·안정성

#### E-017 · 무중단 배포 커버리지 완성 — 웹+워커+게이트웨이+엣지 (완료)
- **ref**: feature-0020(07-14). 워커 build-once 이미지 핀·healthy 게이트·last-good 롤백·게이트웨이 surge replica·alembic stale-image 가드.
- **status**: 확인(검증 환경) — PR #780(eaba795a) 배포 exit 0·healthy·엣지 200. **워커 자동 롤백 미실증 = U-014**. DB HA·호스트 무중단은 범위 밖(SPOF). **프로덕션 라이브 배포 자체는 미진행 = U-020**.

#### E-018 · 코드 자동 지도화 / LLM 내비게이션 완성 (완료)
- **ref**: feature-0012 item10(app.py 19,650→3,722줄·148→21 라우터)+item11(누수 13 DI)+code-nav(순환 폐쇄 §21.11.7+CI 백스톱).
- **status**: 확인(검증 환경) — 매 배치 게이트 GREEN·byte-동치. 인증경로 DI admin 로그인 최종 QA = U-014 계열.

#### E-019 · AI 작업 공간 격리 (신규)
- **ref**: feature-0022(07-21). 전용 DB `agent_scratch`+저권한 role·대화별 스키마·TTL reaper·기본 OFF. 반입=기존 SELECT 신뢰경계 재사용.
- **status**: 확인(개발·검증 환경 활성화) — 유닛 22 PASS·적대 보안리뷰 반영·라이브 스모크(반입→JOIN). **전체 e2e(TTL DROP·대화 격리) TASK-0011 미완 = U-017**. C-1: REPORT "deferred"(초기 스냅샷) vs TASK/REVIEW "활성화 완료" → 후자 기준.

#### E-020 · insight-worker 안정화 + LLM 라우팅 + 헬스 프로브 (이어받음)
- **ref**: RELEASE_NOTES 07-03/04/07(부하분산·heartbeat·edge 폴백 차단, LRN-20260707-0001) + llm-health-probe(07-15)·probe-throttle-flake.
- **status**: 확인 — edge 폴백 차단 LRN Verified·health-probe 37 PASS·throttle 39 PASS. **라이브 배너 자동해소 실증 미완 = U-014 계열**.

---

## 2. 확인 필요 (근거 부족·불일치·단정 위험 — "완료/검증/배포"로 단정 금지)

### U-020 · 프로덕션 라이브 배포 — 보안 결정 대기로 이번 기간 유보 (v2 핵심)
- **왜 확인필요**: 이번 기간 개발·검증은 **검증 환경(로컬→QA)** 에서만 수행. 프로덕션 라이브 배포는 **두 보안 결정** 대기로 미진행(사용자 확인): ① 구글 드라이브 — 사내 계정 구글 로그인 통한 드라이브 접근 허용 여부, ② 라이브 DB 접근 범위 — 복제본 구성 제한으로 라이브 DB 직접 접근 여부(현재 로컬→QA).
- **가진 것 / 없는 것**: 있음=검증 환경 기능·보안 개발·검증 완료. 없음=프로덕션 라이브 배포·라이브 DB 접근·실사용자 트래픽.
- **확인 방법**: 두 보안 결정 후 라이브 전환 → 라이브 배포·모니터링.

### U-021 · DB 복제본 부하분산 — 환경 제약으로 미구성
- **왜 확인필요**: 계획했던 IDC·웹DB 복제본은 **환경 제약으로 미구성**(사용자 확인). 대신 참조에 필요한 메타데이터만 내부 구축(관계도 지도, E-000c/E-012).
- **가진 것 / 없는 것**: 있음=참조 메타데이터 내부 구축(23,465 객체). 없음=복제본 기반 실 부하분산.
- **확인 방법**: 환경 확보 시 복제본 구성 재검토.

### U-009 · 공유 window·ENUM 채택 인박스·제품분류 — 라이브 시각검증 (일부 이월)
- 기능·보안·테스트 완료이나 일부 PB-0008 = POST-DEPLOY(검증 환경 baked) 또는 미실측. 확인 방법=배포 후 PB-0008.

### U-010 · 추론 예산 07-09 확대분 별도 PB-0008
### U-011 · 메시지 편집 — 그룹 편집 보안 속성 라이브 (코드 보안리뷰만·별도 PB-0008 부재)
### U-012 · 실시간 진행 표시 — 배포후 라이브 PB-0008 (사전배포 실측만)
### U-013 · 답변 신뢰 기능의 "효과(재발 감소)" 실측 (Critical — 단정 금지)
- 자가검증 리뷰어 실판정 품질·첨부 환각/false-missing 재발 감소·별칭/시스템변수/헬스프로브 라이브 무재발 모두 미측정(`unverified-live`). 확인 방법=대화 감사 corroboration + golden 평가.
### U-014 · 무중단 자동 롤백·인증경로 admin QA·헬스프로브 배너해소 — 라이브 실증
### U-015 · AI 운영 관제 패널 — 라이브 + 지연 KPI 트래픽 축적
### U-016 · 관계도 대규모 라이브 팬 성능(FPS) — 실 하드웨어·실 규모 (Critical 측정한계)
- PixiJS 이관 라이브 검증 = 409객체 규모만, 실 규모(수천 테이블) 팬 미확증. 화면 FPS headless 측정 불가.
### U-017 · AI 작업공간 — 전체 e2e·대화 격리 라이브 (TASK-0011 미완, PG 레벨 대화 격리 후속)
### U-018 · 사용자 체감 개선폭(속도·정확도·편의) 정량치 (이월)
### U-019 · 07-11~07-22 사용자 대면 릴리즈노트 main 미랜딩 (doc-sync 브랜치)

---

## 3. 특별 주의 항목 (단정 절대 금지 — §1/§2 로 분류 완료)

- **실제 배포 여부(v2 재정의)**: 이 원장·덱의 "배포됨/POST-DEPLOY/라이브 PB-0008"은 **검증 환경(로컬→QA)** 기준이다. **프로덕션 라이브 배포는 이번 기간 미진행(U-020)** — 보안 결정 2건(드라이브 접근·라이브 DB 범위) 대기. "검증 환경 검증 완료"를 "라이브 운영 실적"으로 오독 금지. 프로덕션 부하 로그 미인용(단일 호스트 부하 시험).
- **테스트 결과**: PASS = make test/컨테이너 스위트·유닛·적대 패널(§18.8)·PB-0008(검증 환경). 미검증 = U-009~U-020.
- **성능 개선 수치**: E-000c(23,465 objects=서버측)·E-013(882노드 7.4×·이웃조회 60x=서버측)·E-012(60fps=검증 환경 실 Windows **409객체 한정**)·E-000d(부하 104/104·RW 134/0=검증 환경 부하시험). **화면 FPS 실 규모=U-016(미확증)**. 측정위치·규모·조건 항상 병기.
- **장애 재발방지 효과**: 가드 도입까지 확인 — 재발 0 실증은 U-013(관측 이연).
- **화면 변경 전후 자료**: 덱은 실측 화면 미첨부 → 전/후는 인라인 SVG 개념 도식(업무 관점) + "실제 화면 대신 개념 도식" 명시.
- **문서-코드 불일치(conflict)**:
  - **C-1**: feature-0022 REPORT "deferred"(초기 스냅샷) vs TASK/REVIEW "활성화 완료" → TASK/REVIEW 최신(검증 환경 활성화, 프로덕션 라이브는 별개=U-020).
  - **C-2**: PixiJS 교체 번호 ADR 없음 — BLUEPRINT/REPORT §78(청중 비노출).
  - **C-3**: 07-11~22 사용자 릴리즈노트 main 미랜딩(U-019).
  - **C-4(청중 비노출)**: feature-0018/0021/0016 정본은 코드가 feature-0003/0002 에 거주하는 cross-cutting 라벨.
  - **C-5(청중 비노출)**: perm-atomic-split UI 단독 아님(엔드포인트 enforcement) — 부작용 회귀 1건 07-16 복구.
